# medical-ai-failure-atlas

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DATA_DICTIONARY.md  LABELING.md  Makefile  PUBLIC_RELEASE_BOUNDARY_V0_1.md  README.md  RELEASE_MANIFEST_V0_1_DRAFT.md  SOCIAL_POSTS.md  app.py  pyproject.toml  requirements.txt
data/: agentic_medicine_sandbox_event_fixtures_v0_1_20260625.jsonl  clinical_state_language_synthetic_fixture_normalized_v0_1_20260625.jsonl  clinical_state_language_synthetic_fixture_v0_1_20260625.jsonl  clinical_state_language_v0_1_20260625.schema.json  clinical_trajectory_engine_transition_fixtures_v0_1_20260625.jsonl  clinical_trajectory_seed_set_v0_1_20260625.jsonl  clinician_severity_layer_seed_rows_20260625.jsonl  inter_rater_review_subset_v0_1.tsv  medical_intelligence_atlas_coverage_matrix_v0_1_20260625.json  medical_intelligence_atlas_release_gate_v0_1_20260625.json  medical_intelligence_atlas_v0_1_20260625.json  medical_reasoning_verifier_synthetic_examples_v0_1.jsonl  mmi_035_closure_controls_v0_1_20260625.jsonl  mmi_035_closure_report_v0_1_20260625.json  mmi_036_closure_archive_controls_v0_1_20260625.jsonl  mmi_036_closure_archive_report_v0_1_20260625.json  mmi_037_closure_archive_reuse_controls_v0_1_20260625.jsonl  mmi_037_closure_archive_reuse_report_v0_1_20260625.json  mmi_038_closure_archive_reuse_release_controls_v0_1_20260625.jsonl  mmi_038_closure_archive_reuse_release_report_v0_1_20260625.json  mmi_039_closure_archive_reuse_release_handoff_controls_v0_1_20260625.jsonl  mmi_039_closure_archive_reuse_release_handoff_report_v0_1_20260625.json  mmi_040_closure_archive_reuse_release_handoff_closure_controls_v0_1_20260625.jsonl  mmi_040_closure_archive_reuse_release_handoff_closure_report_v0_1_20260625.json  mmi_041_closure_archive_reuse_release_handoff_closure_archive_controls_v0_1_20260625.jsonl  mmi_041_closure_archive_reuse_release_handoff_closure_archive_report_v0_1_20260625.json  (+326 more)
medmarks_candidate_env_v1_20260614/environments/failure_atlas_safety_wording/: README.md  pyproject.toml
(+979 files in other folders)
